--- a/E_commerce/E_commerce/templates/adminorderdetails.html
+++ b/E_commerce/E_commerce/templates/adminorderdetails.html
@@ -34,7 +34,7 @@
       <h5> <b>Your Payment Id:</b> {{order.payment}} </h5>
       <h5> <b>Your Order Date:</b> {{order.created_at}} </h5>
       <h5> <b>Your Order Status:</b> {{order.order_status}} </h5>
-      <h5> <b>Buyer Name:</b> {{order.user}} </h5>
+      <h5> <b>Buyer Name:</b> {{order.full_name}} </h5>
       <h5> <b>Order Notes:</b> {{order.order_note}} </h5>
       <h5> <b>Shipping address:</b> {{order.shipping_address}} </h5>
       <table class="table">
