--- a/E_commerce/E_commerce/templates/sidebar.html
+++ b/E_commerce/E_commerce/templates/sidebar.html
@@ -94,7 +94,7 @@
     </div>
 
     <div class="content">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
+        <nav class="navbar navbar-expand-md navbar-light bg-light" style="position: absolute;">
             <div class="container-fluid">
                 <div class="d-flex justify-content-between d-md-none d-block">
                     <button class="btn px-1 py-0 open-btn me-2" id="openBtn"><i class="bi bi-view-list"></i></button>
