--- a/E_commerce/E_commerce/templates/base.html
+++ b/E_commerce/E_commerce/templates/base.html
@@ -22,7 +22,7 @@
 
 </head>
 
-<body>
+<body style="min-width: 100vh;">
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <!-- Logo -->
