--- a/E_commerce/E_commerce/templates/adminorder.html
+++ b/E_commerce/E_commerce/templates/adminorder.html
@@ -45,6 +45,7 @@
                             <th>Order ID</th>
                             <th>Order Name</th>
                             <th>Order Status</th>
+                            <th>Payment Status</th>
                             <th>Order Amount</th>
                             <th>Order date</th>
                             <th>View Order</th>
@@ -57,13 +58,16 @@
 
                         <tr>
                             <td>
-                                <span class="font-weight-bold cartprodname">{{ order.id }}</span>
+                                <span class="font-weight-bold">{{ order.id }}</span>
                             </td>
                             <td>
-                                <span class="font-weight-bold cartprodname">{{ order.user }}</span>
+                                <span class="font-weight-bold ">{{ order.user }}</span>
                             </td>
                             <td>
-                                <span class="font-weight-bold cartprodname">{{ order.order_status }}</span>
+                                <span class="font-weight-bold ">{{ order.order_status }}</span>
+                            </td>
+                            <td>
+                                <span class="font-weight-bold ">{{ order.payment.status }}</span>
                             </td>
                             <td>
                                 <span class="font-weight-bold">{{ order.order_total }}</span>
@@ -117,5 +121,4 @@
         </div>
     </div>
 </div>
-{% endfor %} 
-{% endblock dashboard-content %}
+{% endfor %} {% endblock dashboard-content %}
