--- a/E_commerce/E_commerce/templates/sidebar.html
+++ b/E_commerce/E_commerce/templates/sidebar.html
@@ -85,7 +85,7 @@
         <hr class="h-color mx-2">
 
         <ul class="list-unstyled px-2">
-            <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="bi bi-gear"></i>
+            <li class=""><a href="{% url 'settings' %}" class="text-decoration-none px-3 py-2 d-block"><i class="bi bi-gear"></i>
                     Settings</a></li>
             <li class=""><a href="#" class="text-decoration-none px-3 py-2 d-block"><i class="bi bi-bell"></i>
                     Notifications</a></li>
